fix overlapping form-control issue; fix image selection issues; add filter overlay click handler; fix about-us responsiveness issues;

--- a/my-app/src/Admin/Header/Header.module.css
+++ b/my-app/src/Admin/Header/Header.module.css
@@ -1,7 +1,8 @@
-.header{
+.header {
     width: 100%;
-    background: #FEFEFE;
+    background: #fefefe;
     position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     display: flex;
@@ -11,47 +12,47 @@
     margin: 0 auto;
 }
 
-.header_leftPart{
+.header_leftPart {
     display: flex;
     gap: 100px;
     align-items: center;
 }
 
-.header_logo{
-    color: #6566AC;
+.header_logo {
+    color: #6566ac;
     font-family: Oswald;
     font-size: 36px;
     font-weight: 400;
     cursor: pointer;
 }
 
-.header_pageTitle{
-    color: #6566AC;
-    font-family: "Noto Sans";
+.header_pageTitle {
+    color: #6566ac;
+    font-family: 'Noto Sans';
     font-size: 24px;
     font-weight: 700;
 }
 
-.header_rightPart{
+.header_rightPart {
     display: flex;
     gap: 16px;
     align-items: center;
 }
 
-.header_photo{
+.header_photo {
     width: 48px;
     height: 48px;
-    background-color: #B1B2FF;
+    background-color: #b1b2ff;
     border-radius: 50%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    border: 0.1px solid #B1B2FF;
+    border: 0.1px solid #b1b2ff;
 }
 
-.header_name{
-    color: #2B2B2B;
-    font-family: "Noto Sans";
+.header_name {
+    color: #2b2b2b;
+    font-family: 'Noto Sans';
     font-size: 16px;
     font-weight: 400;
     letter-spacing: 0.3px;
