--- a/my-app/src/Admin/ProductsPage/assets/styles/products.module.css
+++ b/my-app/src/Admin/ProductsPage/assets/styles/products.module.css
@@ -28,7 +28,11 @@ td {
     font-size: 2.285rem;
     font-weight: 500;
     color: #6566ac;
-    margin-block-end: 3.428rem;
+    margin-block: 3.428rem;
+
+    @media screen and (width >= 1280px) {
+        margin-block-start: 0;
+    }
 }
 
 .products__form {
